# world_engine

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  server.py
docs/: requirements.txt
docs/source/: api_reference.rst  conf.py  index.rst  modeling_specifics.rst  quantization.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/api/: modules.rst
examples/: benchmark.py  gen_sample.py  mouse_client.py  server.py  simple_client.py  skypilot.yaml  webrtc_server.py  websocket_server.py
src/: __init__.py  ae.py  ae_nn.py  patch_model.py  quantize.py  world_engine.py
src/model/: __init__.py  attn.py  base_model.py  kv_cache.py  nn.py  nocast_module.py  noise_cond.py  rope.py  world_model.py
world_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
