[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world_engine"
version = "0.0.3"
requires-python = ">=3.13"
dependencies = [
  "torch==2.9.1+cu128",
  "torchvision==0.24.1+cu128",
  "torchaudio==2.9.1+cu128",
  "einops",
  "rotary-embedding-torch>=0.8.8",
  "tensordict==0.10.0",
  "transformers==4.57.3",
  "ftfy",
  "diffusers",
  "huggingface-hub==0.36.0",
  "omegaconf",
  "accelerate==1.12.0",
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "websockets>=15.0.1",
  # WebRTC dependencies
  "aiortc>=1.9.0",
  "av>=12.0.0",
]

[tool.setuptools]
packages = [
  "world_engine",
  "world_engine.model",
]

[tool.setuptools.package-dir]
world_engine = "src"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = [
  "https://download.pytorch.org/whl/nightly/cu128",
]
index-strategy = "unsafe-best-match"

[tool.pyright]
extraPaths = ["src"]
typeCheckingMode = "off"
